--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             }
             .footer-link {
                 padding: 15px;
+                color: rgba(0,0,0,.54);
             }
             .footer-link-right {
                 float: right;
